src/test/ui/reachable/expr_method.stderr
error: unreachable expression
  --> $DIR/expr_method.rs:15:21
   |
LL |     Foo.foo(return, 22);
   |             ------  ^^ unreachable expression
   |             |
   |             any code following this expression is unreachable
   |
note: lint level defined here
  --> $DIR/expr_method.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable call
  --> $DIR/expr_method.rs:20:9
   |
LL |     Foo.bar(return);
   |         ^^^ ------ any code following this expression is unreachable
   |         |
   |         unreachable call

error: aborting due to 2 previous errors

